[gd_scene load_steps=4 format=3 uid="uid://c8hnrf1l0dfw0"]

[ext_resource type="Script" path="res://scripts/entities_scripts/players_scripts/player_standby.gd" id="1_j6cj0"]
[ext_resource type="PackedScene" uid="uid://bba5o3t2xufxm" path="res://components/player_stats_component.tscn" id="2_pp187"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oyik"]
size = Vector2(10, 10)

[node name="PlayerStandby" type="Node2D"]
position = Vector2(2e+06, 2e+06)
script = ExtResource("1_j6cj0")

[node name="PlayerStatsComponent" parent="." instance=ExtResource("2_pp187")]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AttackShape" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_8oyik")
target_position = Vector2(20, 0)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AllyAttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
